changed docs and try fixing scrollbar

--- a/src/Web/autopilot-monitor-web/app/globals.css
+++ b/src/Web/autopilot-monitor-web/app/globals.css
@@ -4,8 +4,8 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-y: scroll;
-  scrollbar-gutter: stable;
+  overflow-y: auto;
+  scrollbar-gutter: stable both-edges;
 }
 
 :root {
